# project-setup

./: .travis.yml  CMakeLists.txt
test/: CMakeLists.txt  t1.cpp  t2.cpp
