cmake_minimum_required(VERSION 3.10)
project(ci-test)
include(CheckCXXCompilerFlag)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(GCC_STYLE_WARNINGS "-Wall -Wextra -Wshadow -Wnon-virtual-dtor -pedantic")
set(GCC_STYLE_OPTIMIZATIONS "-O3 -march=native -mtune=native")

set(WIN_STYLE_WARNINGS "/permissive- /W4 /W14640")
set(WIN_STYLE_OPTIMIZATIONS "/O2")

if (CXX_COMPILER_ID STREQUAL "MSVC")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${WIN_STYLE_WARNINGS}")
    if (CMAKE_BUILD_TYPE STREQUAL "Release")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${WIN_STYLE_OPTIMIZATIONS}")
    endif()
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_STYLE_WARNINGS}")
    if (CMAKE_BUILD_TYPE STREQUAL "Release")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_STYLE_OPTIMIZATIONS}")
    endif()
endif()
enable_testing()
add_subdirectory(googletest)
include(GoogleTest)
add_subdirectory(test)
